fixing nav spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,9 @@ header h1 {
 header nav {
     color: var(--primary-color);
     font-weight: lighter;
-    float: right;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin: 1.5% 5% 1.5% 0;
 }
 
@@ -50,6 +52,7 @@ header nav ul {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    /* margin: 1.5% 5% 1.5% 0; */
 }
 
 header nav ul li {
